Updating summary and fixing misspelling

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div id="about" class="jumbotron jumbotron-fluid">
           <div class="container">
               <h1 class="display-4">About Me</h1>
-              <p class="lead">I am a Senior at Andover High School who is interested in a career in a computer science. In the various computer science classes I have taken I have learned object-oriented programming in Java as well as website creation and design along with some Android app development. My experience with robotics includes being a part of the FTC (first tech challenge) robotics club at my high school where I am a team leader, as well as starting my own robotics club (Seaperch). Through this journey, from building and coding robots for the FTC club to learning the engineering design process in Seaperch, I realized how robotics and software can change the world. In the FTC, my team has gone to the states competition, the past 4 years and this year we were able to progress to eleventh place. Seaperch is a robotics club I started with some of my peers at Andover High. This club takes part in the Seaperch competition hosted by the US Navy.</p>
+              <p class="lead">I am a Freshman at Purdue University majoring in Computer Science. In the various computer science classes I have taken I have learned Python, C and object-oriented programming in Java as well as website creation and design along with some Android app development.</p>
               
               <div class="mx-auto" style="width: 1000;">
                   <h4 id="Projects">For more information on my edcuation and activities visit the below links:</h4>
@@ -109,7 +109,7 @@
                       <img style="padding-top: 10px" src="img/DonkeyKong.png" class="card-img-top">
                       <div class="card-body">
                           <h2>Donkey Kong</h2>
-                          <p class="card-text">In my AP Java class I recreated a level of the Donkey Kong game. Using object oriented principles I made the s to be interfaceable with the Arcade interface the class was using to make an Arcade of multiple games. <br><u>Click for more info</u></p>
+                          <p class="card-text">In my AP Java class I recreated a level of the Donkey Kong game. Using object oriented principles I made the game implement the Arcade interface the class was using to make an Arcade of multiple games.</u></p>
                       </div>
                   </div>
               </div>
