--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <p class="lead">I am a Freshman at Purdue University majoring in Computer Science. In the various computer science classes I have taken I have learned Python, C and object-oriented programming in Java as well as website creation and design along with some Android app development.</p>
               
               <div class="mx-auto" style="width: 1000;">
-                  <h4 id="Projects">For more information on my edcuation and activities visit the below links:</h4>
+                  <h4 id="Projects">For more information on my education and activities visit the below links:</h4>
               </div>
               
               <div class="mx-auto" style="width:150px;">
