--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                       <div class="carousel-caption d-none d-md-block">
                           <div class="alert alert-danger" role="alert">
                               <h1>Nalin Sinha</h1>
-                              <h2>AHS Senior and Computer Science Enthusiast</h2>
+                              <h2>Purdue CS Freshman</h2>
                           </div>
                           
                       </div>
